<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_weather"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_weather">

    <TextView
        android:id="@+id/text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/city_moscow"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_round_settings_24" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_weather"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/weather_image"
            tools:src="@drawable/icon_weather_cloudy" />

        <TextView
            android:id="@+id/text_weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:text="22°" />

        <TextView
            android:id="@+id/text_weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="6dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/message_cloudy" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_weather_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/message_error"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:alpha="0.5"
        tools:layout_marginTop="20dp"
        tools:visibility="visible" />

</FrameLayout>